crates/plotnik-tests/tests/03-analyze/empty_constructs/empty_alternation.txt
Q = []
------------------ DIAGNOSTICS -------------------
error: empty `[]` matches nothing
 --> query.ptk:1:5
  |
1 | Q = []
  |     ^^
  |
help: alternations must contain at least one branch
-------------------- SYMBOLS ---------------------
